# app

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  .gitignore.new  .nixpacksignore  .npmrc  .platform.yml  .prettierignore  .swcrc  .swcrc.test  404.html  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CHECKPOINT_PREVIEW_SYSTEM.md  CONTRIBUTING.md  Cargo.toml  DEPLOY_GUIDE.md  DESIGN_REVIEW.md  DOCKER.md  Dockerfile  Dockerfile.dev  Dockerfile.hf  Dockerfile.prod  Dockerfile.production  Dockerfile.simple  EXHAUSTIVE_IP_INVENTORY.md  FAQ.md  HANZO-STACK.md  HANZO_EDIT.md  IMPLEMENTATION_SUMMARY.md  JAN_SOL_FEATURE_INVENTORY.md  LICENSE  LLM.md  MONOREPO_ARCHITECTURE.md  MONOREPO_STATUS.md  Makefile  NOTICE  (+64 more)
.claude/: settings.local.json
.gitea/workflows/: build-image.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  (+1 more)
@types/: hanzo-ui.d.ts
CONTRIBUTING/: index.html
FAQ/: index.html
app/: _app.tsx  entry.server.tsx  global-error.tsx  layout.tsx  manifest.ts  not-found.tsx  page.tsx  providers.tsx  robots.ts  root.tsx  sitemap.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  search.rs  tray.rs  tray_simple.rs
apps/desktop/src-tauri/src/commands/: apps.rs  bookmarks.rs  clipboard.rs  computer.rs  dev_tools.rs  dnd.rs  files.rs  keychain.rs  launch.rs  llama.rs  media.rs  mod.rs  shortcuts.rs  status_bar.rs  system.rs  toast.rs  voice.rs  wifi.rs  window.rs  window_controller.rs
apps/desktop/src-tauri/src/platform/: mod.rs
apps/desktop/src-tauri/src/plugins/native/: commands.rs  mod.rs  swift_bridge.rs
apps/launcher/src-tauri/: Cargo.toml  tauri.conf.json
apps/launcher/src-tauri/capabilities/: default.json
apps/launcher/src-tauri/icons/: icon.icns
apps/launcher/src-tauri/src/: lib.rs  main.rs
assets/: globals.css
components/: HanzoLogo.tsx  SidebarWallet.tsx  chunk-reloader.tsx  error-boundary.tsx  iframe-detector.tsx  iframe-warning-modal.tsx  import-git-panel.tsx  local-ai-settings.tsx  model-selector.tsx  pointer-events-guard.tsx  template-gallery.tsx  template-thumb.tsx
constants/: brand.ts
crates/hanzo-ipc/: Cargo.toml
crates/hanzo-ipc/src/: lib.rs
crates/hanzo-node/: Cargo.toml
crates/hanzo-node-manager/: Cargo.toml
crates/hanzo-node-manager/src/: lib.rs  manager.rs
crates/hanzo-node/src/: config.rs  health.rs  lib.rs  paths.rs  process.rs
data/: app-catalog.ts  games-catalog.ts  osws.sqlite-shm  osws.sqlite-wal  surfaces.data.ts
docker/: Dockerfile  Dockerfile.dev  compose.prod.yml  compose.yml  init-mongo.js
docs/: .env.example  AGENTIC-CODING.md  BRANCH_PROTECTION.md  DEPLOYMENT.md  README.md  _redirects  mkdocs.yml  next-sitemap.config.js  next.config.mjs  package.json  plopfile.js  pnpm-lock.yaml  pyproject.toml  theme.config.tsx
fastlane/: Fastfile  report.xml
functions/: [[path]].ts
hooks/: use-error-handler.ts  useAuth.ts  useCallAi.ts  useFolders.ts  useProjects.ts  useUser.ts
lib/: api-client.ts  api.ts  auth.ts  avatar.ts  base.ts  bot-gateway.ts  client-auth.ts  commerce-client.ts  commerce.ts  community.ts  connectors.ts  consts.ts  csrf.ts  folders.ts  format-pages.ts  gallery-catalog.ts  gallery.ts  get-cookie-name.ts  gui.config.ts  hanzo-daemon.ts  hanzo-ecosystem.ts  mongodb-optimized.ts  mongodb.ts  org-scope.ts  platform.ts  project-status.tsx  project-templates.ts  projects-view.ts  prompts.ts  providers.ts  recent-projects.ts  reference-images.ts  remix.ts  resources-catalog.ts  reward-signal.ts  seo.ts  session.ts  site.ts  store-bff.ts  store-config.ts  (+12 more)
macos/: tailwind.config.js
mocks/: hanzo-i18n.js  hanzo-message-ts.js  hanzo-node-state.js  use-combined-refs.js  utils.js
public/: CNAME  edit.js  service-worker.js
scripts/: build-mcp-server.js  build-no-typecheck.js  compile-hanzo-ui.sh  create-template-repos.sh  create_better_tray_icon.py  create_icns.py  create_icon.py  create_tray_icon.py  deploy.sh  download-side-binaries.ts  fix-all-ts-errors.sh  fix-remaining-ts.sh  fix-typescript-errors.js  gen-edit-manifest.mjs  generate-enso-logo.js  generate-hanzo-logo.js  generate-ollama-models-repository.ts  organize-templates.sh  patch-dist.js  patch-hanzo-ui.js  pre-push.sh  precompile-hanzo-ui.js  publish-hanzonet-packages.sh  push-gallery-hanzoai.sh  push-gallery.sh  push-templates-static.sh  run-with-colors.sh  setup-github-secrets.sh  setup-hf-templates.sh  test-performance.js  update-imports.sh  update.sh  wait-for-mongo.sh
search/: search_index.json
templates/: create-hf-templates.sh
test/: test-browser.html  test-features.js  test-llama-server.sh
test-detection/: Cargo.toml
tests/: api.test.ts  build.test.ts  health.test.ts  projects-view.test.ts  redirect.test.ts  usage.test.ts
types/: hanzo-usage.d.ts  index.ts
(+1741 files in other folders)
