[workspace]
members = [
    "crates/hanzo-node",
    "crates/hanzo-node-manager",
    "crates/hanzo-ipc",
    "apps/hanzo-desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Hanzo Team"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
async-trait = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true