[package]
name = "hanzo-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "IPC contracts and types for Hanzo desktop communication"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }