[package]
name = "hanzo-node-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Desktop-side manager for Hanzo node lifecycle"

[dependencies]
hanzo-node = { path = "../hanzo-node" }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"