# Own workspace root. The repo root Cargo.toml declares a legacy cargo
# workspace (member `src-tauri`, which no longer exists); without this empty
# table cargo would walk up and try to build this crate as part of that broken
# workspace. Isolating it keeps the launcher's Tauri build self-contained.
[workspace]

[package]
name = "hanzo-launcher"
version = "0.1.0"
description = "Hanzo Launcher — Tauri shell for the @hanzo/gui launcher UI"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "hanzo_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# Track the installed @tauri-apps/cli / @tauri-apps/api (2.11.x) major.minor.
tauri-build = { version = "2", default-features = false, features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
